--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,7 @@
 server:
-	port: "8080"
+  address: 0.0.0.0
+  port: 8080
 prometheus:
-	address: "127.0.0.1"
-	port: "9090"
-interval: "10s"
+  address: 0.0.0.0
+  port: 9090
+interval: 10s
