Deploy Grafana container using docker compose
Add config to create prometheus datasource

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,6 +2,6 @@ server:
   address: 0.0.0.0
   port: 8080
 prometheus:
-  address: 0.0.0.0
+  address: metricly_metricly_1
   port: 9090
 interval: 10s
