--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,20 +14,33 @@ services:
     environment:
       - HOSTNAME=${HOSTNAME}
 
-  # prometheus:
-  #   image: prom/prometheus:latest
-  #   volumes:
-  #     - ./prometheus.yml:/etc/prometheus/prometheus.yml
-  #   ports:
-  #     - "9090:9090"
-  #   networks:
-  #     - monitoring
-  #   restart: always
+  prometheus:
+    image: prom/prometheus:latest
+    volumes:
+      - /etc/metricly/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    ports:
+      - "9090:9090"
+    restart: always
+    depends_on:
+      metricly:
+        condition: service_healthy
 
-  # grafana:
-  #   image: grafana/grafana:latest
-  #   ports:
-  #     - "3000:3000"
-  #   networks:
-  #     - monitoring
-  #   restart: always
+  grafana:
+    image: grafana/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - /etc/metricly/provisioning/:/etc/grafana/provisioning/:ro
+      # - grafana-data:/var/lib/grafana
+    ports:
+      - "3000:3000"
+    restart: always
+    depends_on:
+      - prometheus
+
+
+# networks:
+#   metricly:
+#     name: metricly
+#     driver: bridge
