--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,6 +2,7 @@ server:
   address: 0.0.0.0
   port: 8080
 prometheus:
-  address: metricly_metricly_1
+  address: 0.0.0.0
   port: 9090
 interval: 10s
+debug: true
