--- a/config/grafana/provisioning/datasources/prometheus-datasource.yml
+++ b/config/grafana/provisioning/datasources/prometheus-datasource.yml
@@ -4,6 +4,6 @@ datasources:
   - name: Prometheus
     type: prometheus
     access: proxy
-    url: http://metricly_prometheus_1:9090
+    url: http://127.0.0.1:9090
     isDefault: true
     editable: true
