--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -4,6 +4,7 @@ global:
 scrape_configs:
   - job_name: 'metricly'
     scrape_interval: 10s
+    metrics_path: /api/v1/metrics
     static_configs:
       - targets:
-          - 'metricly_metricly_1:8080' # Target where your app exposes metrics
+          - '127.0.0.1:8080' # Target where your app exposes metrics
