--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -66,5 +66,5 @@ jobs:
         with:
           context: ../../Dockerfile
           push: true
-          tags: quay.io/${{ secrets.QUAY_USERNAME }}/metricly:latest
+          tags: quay.io/yadneshk/metricly:latest
 
