--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -64,7 +64,8 @@ jobs:
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
-          context: ../../Dockerfile
+          context: ../../
+          file: ./Dockerfile
           push: true
           tags: quay.io/yadneshk/metricly:latest
 
