--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,17 +19,17 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.22'
+        go-version: '1.23.3'
 
     # Install dependencies
     - name: Install dependencies
       run: go mod tidy
 
     # Run static analysis and linters
-    # - name: Run linters
-    #   run: |
-    #     go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.54.2
-    #     golangci-lint run
+    - name: Run linters
+      run: |
+        go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.62.2
+        golangci-lint run
 
     # Run tests
     - name: Run tests
