--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -7,4 +7,4 @@ scrape_configs:
     metrics_path: /api/v1/metrics
     static_configs:
       - targets:
-          - '127.0.0.1:8080' # Target where your app exposes metrics
+          - 'metricly:8080' # Target where your app exposes metrics
