--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -42,10 +41,80 @@ jobs:
         name: coverage-report
         path: coverage.out
 
-  docker-build:
-    name: Build and Push Docker Image to Quay.io
+  docker-build-test:
+    name: Build and Test Docker Image
     runs-on: ubuntu-latest
     needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Build Metricly Image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          push: false
+          tags: quay.io/yadneshk/metricly:latest
+
+      # Step 3: Pull and Run the Metricly container
+      - name: Run Metricly container
+        run: |
+          podman run -d \
+            --name metricly \
+            -p 8080:8080 \
+            -v ./config/config.yaml:/etc/metricly/config.yaml:ro \
+            quay.io/yadneshk/metricly:latest
+          sleep 20
+
+      # Step 4: Verify metrics are exposed
+      - name: Verify metrics endpoint
+        run: |
+          RESPONSE=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/api/v1/metrics)
+          if [ "$RESPONSE" -ne 200 ]; then
+            echo "Metrics endpoint not reachable"
+            exit 1
+          fi
+          echo "Metrics endpoint is reachable and returned HTTP $RESPONSE"
+
+      # Step 5: Optional - Inspect metrics content
+      - name: Fetch and log metrics
+        run: |
+          RESPONSE=$(curl -s http://localhost:8080/api/v1/metrics)
+          if echo "$RESPONSE" | grep -q "metricly_cpu_total"; then
+            echo "metricly_cpu_total found!"
+          else
+            echo "metricly_cpu_total not found!" && exit 1
+          fi
+
+          if echo "$RESPONSE" | grep -q "metricly_memory_total_bytes"; then
+            echo "metricly_memory_total_bytes Metrics found!"
+          else
+            echo "metricly_memory_total_bytes not found!" && exit 1
+          fi
+
+          if echo "$RESPONSE" | grep -q "metricly_disk_usage_percentage"; then
+            echo "metricly_disk_usage_percentage Metrics found!"
+          else
+            echo "metricly_disk_usage_percentage not found!" && exit 1
+          fi
+
+          if echo "$RESPONSE" | grep -q "metricly_network_rx_bytes"; then
+            echo "metricly_network_rx_bytes Metrics found!"
+          else
+            echo "metricly_network_rx_bytes not found!" && exit 1
+          fi
+
+      # Step 6: Stop and remove the container
+      - name: Clean up container
+        run: podman rm -f metricly
+
+  docker-build-push:
+    name: Build and Test Docker Image
+    runs-on: ubuntu-latest
+    needs: docker-build-test
+    if: github.event_name == 'push'
 
     steps:
       - name: Checkout code
@@ -68,4 +137,3 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: quay.io/yadneshk/metricly:latest
-
