--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -50,28 +50,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Build Metricly Image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./Dockerfile
-          push: false
-          tags: quay.io/yadneshk/metricly:latest
-
-      # Step 3: Pull and Run the Metricly container
-      - name: Run Metricly container
+      - name: Build and run container
         run: |
-          podman run -d \
-            --name metricly \
-            -p 8080:8080 \
-            -v ./config/config.yaml:/etc/metricly/config.yaml:ro \
-            quay.io/yadneshk/metricly:latest
-          sleep 20
+          pip3 install podman-compose
+          docker compose up -d --build
+          sleep 60
+          docker ps -a
+          # health_status=$(sudo docker inspect --format '{{.State.Health.Status}}' metricly_metricly)
+          # if [[ "$health_status" != "healthy" ]]; then
+          #   sudo podman inspect metricly_metricly
+          #   echo "Error: The container is not healthy. Exiting."
+          #   # exit 1  # Fail the script if the container is not healthy
+          # fi
 
       # Step 4: Verify metrics are exposed
       - name: Verify metrics endpoint
         run: |
-          RESPONSE=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/api/v1/metrics)
+          RESPONSE=$(curl -s -o /dev/null -w "%{http_code}" http://127.0.0.1:8080/api/v1/metrics)
           if [ "$RESPONSE" -ne 200 ]; then
             echo "Metrics endpoint not reachable"
             exit 1
@@ -81,7 +76,7 @@ jobs:
       # Step 5: Optional - Inspect metrics content
       - name: Fetch and log metrics
         run: |
-          RESPONSE=$(curl -s http://localhost:8080/api/v1/metrics)
+          RESPONSE=$(curl -s http://127.0.0.1:8080/api/v1/metrics)
           if echo "$RESPONSE" | grep -q "metricly_cpu_total"; then
             echo "metricly_cpu_total found!"
           else
@@ -106,9 +101,40 @@ jobs:
             echo "metricly_network_rx_bytes not found!" && exit 1
           fi
 
+      - name: Test /api/v1/query
+        run: |
+          time=$(($(date +%s) - 10))
+          RESPONSE=$(curl -s "http://127.0.0.1:8080/api/v1/query?metric=metricly_cpu_total&time=$time")
+          if [[ $(echo "$RESPONSE" | jq '.data.result[0].value|length') -ne 2 ]]; then
+            echo "Didn't get any data point"
+            echo $RESPONSE
+            exit 1
+          fi
+
+      - name: Test /api/v1/query_range
+        run: |
+          start=$(($(date +%s) - 100))
+          end=$(date +%s)
+          RESPONSE=$(curl -s "http://127.0.0.1:8080/api/v1/query_range?metric=metricly_cpu_total&start=$start&end=$end&step=15s")
+          if [[ $(echo "$RESPONSE" | jq '.data.result[0].values|length') -le 1 ]]; then
+            echo "Didn't multiple data points"
+            echo $RESPONSE
+            exit 1
+          fi
+
+      - name: Test /api/v1/aggregate
+        run: |
+          RESPONSE=$(curl -s "http://127.0.0.1:8080/api/v1/aggregate?metric=metricly_cpu_total&operation=avg&window=1m")
+          if [[ $(echo "$RESPONSE" | jq '.data.result[0].value|length') -ne 2 ]]; then
+            echo "Didn't multiple data points"
+            echo $RESPONSE
+            exit 1
+          fi
+
+
       # Step 6: Stop and remove the container
       - name: Clean up container
-        run: podman rm -f metricly
+        run: make run_compose_down
 
   docker-build-push:
     name: Build and Test Docker Image
